finished extracting and fixed a bug